# super_rogue_soccer

./: Cargo.toml  README.md  protocol.md
src/: actors.rs  asset_tracking.rs  debug.rs  entities.rs  lib.rs  main.rs  ui.rs
src/actors/: actions.rs  enemy.rs  mod.rs  names.rs  pathfinding.rs
src/map/: field.rs  mod.rs
src/prelude/: consts.rs  mod.rs
src/prelude/components/: image_node_fade_in_out.rs  interactables.rs  mod.rs
src/prelude/resources/: glyph_asset.rs  mod.rs  panel_border_asset.rs  resource_handles.rs
src/prelude/systems/: actors.rs  map.rs  mod.rs
src/prelude/traits/: containers.rs  load_resource.rs  mod.rs  spawn.rs  widgets.rs
src/states/: gameplay.rs  loading.rs  mod.rs  splash.rs  splashscreen.rs
src/states/gameplay/: enemy_turn.rs  mod.rs  player_turn.rs  setup.rs  show_banner.rs
src/theme/: mod.rs  widgets.rs
web/: index.html
