[package]
name = "super_rogue_soccer"
version = "0.1.0"
edition = "2024"

[features]
debug = ["dep:bevy-inspector-egui"]

[dependencies]
bevy = "0.15.3"
bevy-inspector-egui = { version = "0.29.1", optional = true }
bevy_ecs_tilemap = "0.15.0"
leafwing-input-manager = "0.16.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3