[package]
name = "super_rogue_soccer"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug"]
debug = ["dep:bevy-inspector-egui"]

[dependencies]
bevy = "0.15.3"
bevy-inspector-egui = { version = "0.29.1", optional = true }
bevy_ecs_tilemap = "0.15.0"
bevy_old_tv_shader = { git = "https://github.com/shanecelis/bevy_old_tv_shader", branch = "add-ui-feature", version = "0.2.0", features = ["ui"]}
leafwing-input-manager = "0.16.0"
priority-queue = "2.1.2"
rand = "0.9.0"
rand_chacha = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
